--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <img class="icons" src="./images/icon-facebook.svg" alt="icon-facebook">
             <img class="icons" src="./images/icon-twitter.svg" alt="icon-twitter">
             <img class="icons" src="./images/icon-pinterest.svg" alt="icon-pinterest">
+            <div class="triangle hidden"></div>
           </div>
           <div class="icon-share">
             <svg id="svg" xmlns="http://www.w3.org/2000/svg" width="15" height="13">
