--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
       </div>
       <div class="card__footer">
-        <p class="first__paragragh --padding-mod">
+        <h1 class="first__paragragh --padding-mod">
           Shift the overall look and feel by adding these wonderful
           touches to furniture in your home
-        </p>
+        </h1>
 
         <p class="second__paragragh --padding-mod">
           Ever been in a room and felt like something was missing? Perhaps
